test delete file
